feat: Updated OAuth2LoginSuccessHandler.java